remove button overlapping bug

--- a/src/pages/AllTasks.css
+++ b/src/pages/AllTasks.css
@@ -3,7 +3,6 @@
 }
 .card {
   transition: .3s;
-  z-index: -1;
 }
 
 .card:hover {
